| Bug #42264 | nbdbapi: segv in get_connect_count | ||
|---|---|---|---|
| Submitted: | 22 Jan 2009 10:45 | Modified: | 23 Jan 2009 12:03 |
| Reporter: | Tomas Ulin | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: NDB API | Severity: | S3 (Non-critical) |
| Version: | 6.2 -> | OS: | Any |
| Assigned to: | CPU Architecture: | Any | |
[22 Jan 2009 10:45]
Tomas Ulin
[22 Jan 2009 10:46]
Bugs System
Pushed into 5.1.31-ndb-6.2.17 (revid:tomas.ulin@sun.com-20090122104556-88uyzfik6fe6tyqf) (version source revid:tomas.ulin@sun.com-20090122104556-88uyzfik6fe6tyqf) (merge vers: 5.1.31-ndb-6.2.17) (pib:6)
[23 Jan 2009 9:16]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/63872 2794 Tomas Ulin 2009-01-22 Bug #42264 nbdbapi: segv in get_connect_count
[23 Jan 2009 9:46]
Tomas Ulin
this bug causes e.g. 'show engine ndb status' to segv in 6.4.1 if the cluster is not connected when doing it
[23 Jan 2009 9:58]
Bugs System
Pushed into 5.1.31-ndb-6.3.22 (revid:tomas.ulin@sun.com-20090123095557-qt6eb4qrzmgd3y2x) (version source revid:tomas.ulin@sun.com-20090123095557-qt6eb4qrzmgd3y2x) (merge vers: 5.1.31-ndb-6.3.22) (pib:6)
[23 Jan 2009 10:13]
Bugs System
Pushed into 5.1.31-ndb-6.4.1 (revid:tomas.ulin@sun.com-20090123101040-rdfx44sv08o6encd) (version source revid:tomas.ulin@sun.com-20090123101040-rdfx44sv08o6encd) (merge vers: 5.1.31-ndb-6.4.1) (pib:6)
[23 Jan 2009 12:03]
Jon Stephens
Documented in the NDB-6.2.17/6.3.22/6.4.2 changelogs as follows:
Issuing SHOW ENGINE NDB STATUS on an SQL node
before the management server was connected caused
mysqld to crash.
(6.4.2 rather than 6.4.1 since 6.4.1 was released before this bug was reported.)
[10 Feb 2009 20:13]
Bugs System
Pushed into 6.0.10-alpha (revid:alik@sun.com-20090210194937-s7xshv5l3m1v7wi9) (version source revid:tomas.ulin@sun.com-20090123110300-k3vjhnm1iop8c0h7) (merge vers: 6.0.10-alpha) (pib:6)
