Bug #42264  nbdbapi: segv in get_connect_count